<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <properties>

        <jdk.version>11</jdk.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${jdk.version}</maven.compiler.source>
        <maven.compiler.target>${jdk.version}</maven.compiler.target>
        <java.version>${jdk.version}</java.version>
        <main.class></main.class>

        <maven-assembly-plugin-org.apache.maven.plugins.version>3.7.1
        </maven-assembly-plugin-org.apache.maven.plugins.version>
        <maven-compiler-plugin-org.apache.maven.plugins.version>3.14.0
        </maven-compiler-plugin-org.apache.maven.plugins.version>
        <maven-dependency-plugin-org.apache.maven.plugins.version>3.8.1
        </maven-dependency-plugin-org.apache.maven.plugins.version>
        <maven-jar-plugin-org.apache.maven.plugins.version>3.4.2</maven-jar-plugin-org.apache.maven.plugins.version>
        <maven-resources-plugin-org.apache.maven.plugins.version>3.3.1
        </maven-resources-plugin-org.apache.maven.plugins.version>
        <maven-clean-plugin-org.apache.maven.plugins.version>3.4.1</maven-clean-plugin-org.apache.maven.plugins.version>
        <maven-surefire-plugin-org.apache.maven.plugins.version>3.5.3
        </maven-surefire-plugin-org.apache.maven.plugins.version>
        <maven-jar-plugin-org.apache.maven.plugins.version>3.4.2</maven-jar-plugin-org.apache.maven.plugins.version>
        <maven-install-plugin-org.apache.maven.plugins.version>3.1.4
        </maven-install-plugin-org.apache.maven.plugins.version>

    </properties>

    <modules>
        <module>grpc-proto-plugin</module>
        <module>common-lib</module>
        <module>lcx-data</module>
        <module>processor</module>
        <module>base-vertx</module>
        <module>vertx-processor</module>
        <!-- <module>example</module> -->
    </modules>

    <groupId>vn.com.lcx</groupId>
    <artifactId>lcx-lib</artifactId>
    <version>1.0</version>

    <build>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven-assembly-plugin-org.apache.maven.plugins.version}</version>
                <configuration>
                    <finalName>${project.artifactId}-${project.version}</finalName>
                    <archive>
                        <manifest>
                            <mainClass>${main.class}</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <!-- <appendAssemblyId>false</appendAssemblyId> -->
                    <!-- <descriptors> -->
                    <!-- <descriptor>custom-jar.xml</descriptor> -->
                    <!-- </descriptors> -->
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin-org.apache.maven.plugins.version}</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <arg>-proc:full</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven-dependency-plugin-org.apache.maven.plugins.version}</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <overWriteReleases>true</overWriteReleases>
                            <overWriteSnapshots>true</overWriteSnapshots>
                            <excludeTransitive>false</excludeTransitive>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                    <execution>
                        <id>download-sources</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>resolve-sources</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>download-javadocs</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>resolve-plugins</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin-org.apache.maven.plugins.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <mainClass>${main.class}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin-org.apache.maven.plugins.version}</version>
                <executions>
                    <execution>
                        <id>copy-java-to-classes</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/main/java</directory>
                                    <includes>
                                        <include>**/*.java</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>

        <pluginManagement>

            <plugins>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven-clean-plugin-org.apache.maven.plugins.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin-org.apache.maven.plugins.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin-org.apache.maven.plugins.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>${maven-install-plugin-org.apache.maven.plugins.version}</version>
                </plugin>

            </plugins>

        </pluginManagement>

    </build>

</project>
